@@ -25,7 +25,6 @@ bin_PROGRAMS = \
 	hp6626 \
 	hp6038 \
 	hp1630 \
-	hp1650 \
 	hptopbm \
 	hptodino \
 	hp3457 \
@@ -38,6 +37,9 @@ bin_PROGRAMS = \
 	a6032 \
 	a34401 \
 	ibquery
+
+noinst_PROGRAMS = \
+	hp1650
 
 hp1630_SOURCES = hp1630.c $(common_sources)
 hp1650_SOURCES = hp1650.c $(common_sources)
